[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme/main.tres" type="Theme" id=1]
[ext_resource path="res://theme/fonts/Roboto_Bold_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/fonts/Roboto_Bold_42.tres" type="DynamicFont" id=3]
[ext_resource path="res://theme/fonts/Roboto_Bold_128.tres" type="DynamicFont" id=4]
[ext_resource path="res://theme/fonts/Roboto_Bold_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://theme/fonts/Roboto_Bold_18.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/Func.gd" type="Script" id=7]

[node name="UI_Func" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 86.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "GameHub Dice Simulator"
align = 1

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 1280.0
margin_bottom = 94.0
theme = ExtResource( 1 )

[node name="Point to" type="Label" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 1280.0
margin_bottom = 158.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Your number:"
align = 1

[node name="Number" type="Label" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 1280.0
margin_bottom = 323.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 327.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Roll_button" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 519.0
margin_right = 761.0
margin_bottom = 161.0
hint_tooltip = "Press to roll the dice"
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Roll"
icon_align = 1

[node name="Explainer" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 1280.0
margin_bottom = 272.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 6 )
text = "To randomly select a number
From
1
-"
align = 1

[node name="Max_number" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 1280.0
margin_bottom = 324.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "6"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 1280.0
margin_bottom = 393.0
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_constants/margin_right = 175
custom_constants/margin_top = 15
custom_constants/margin_left = 175

[node name="Picker" type="HSlider" parent="VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 175.0
margin_top = 15.0
margin_right = 1105.0
margin_bottom = 31.0
hint_tooltip = "Slide to select maximum dice value"
theme = ExtResource( 1 )
min_value = 2.0
value = 6.0
rounded = true

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Roll_button" to="." method="_on_Roll_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/MarginContainer/Picker" to="." method="_on_Picker_value_changed"]
